...
            android:padding="@dimen/button_padding"
            android:focusable="true"
            android:clickable="true"
            app:srcCompat="@drawable/rotate_90" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/done_button_right_margin"
...
